# Agents

./: .gitignore  AgentTelemetry.md  BREAKTHROUGH_SUMMARY.md  CODEOWNERS  LOCAL_MODEL_ARCHITECTURE.md  README.md  eslint.config.js  index.html  node-samples.code-workspace  package-lock.json  package.json
experimental/testing/: .gitignore  README.md  azure.yaml  pipeline.ps1  pyproject.toml  pytest.ini
experimental/testing/.claude/: settings.local.json
experimental/testing/agents/core/dotnet/: Core.csproj
experimental/testing/agents/core/python/: requirements.txt
experimental/testing/agents/quickstart_blob_storage/dotnet/: Program.cs
experimental/testing/agents/quickstart_blob_storage/nodejs/: package-lock.json  package.json
experimental/testing/agents/quickstart_blob_storage/python/: requirements.txt
experimental/testing/agents/quickstart_cosmos_db/dotnet/: Quickstart.csproj
experimental/testing/environments/: README.md
experimental/testing/environments/agentic/: REFERENCE.md  a365.config.TEMPLATE  azure.yaml  pyproject.toml
experimental/testing/environments/agentic/infra/: main.bicep  (+1 more)
experimental/testing/environments/local/: README.md  conftest.py  pytest.ini  tests.Dockerfile
experimental/testing/infra/: main.bicepparam
experimental/testing/infra/modules/: app-registration.bicep  cosmos-db.bicep
experimental/testing/scripts/: inject_config.py  postprovision.ps1
experimental/testing/src/common/: constants.py
experimental/testing/testing-common/: pyproject.toml  pytest.ini
experimental/testing/testing-common/testing_common/: __init__.py  constants.py
experimental/testing/tests/: _agent_client_mixin.py  _scenarios.py  _utils.py  test_basic.py  test_error.py  test_expect_replies.py  test_main.py  test_streaming_response.py
(+447 files in other folders)
