[project]
name = "testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "microsoft-agents-testing @ git+https://github.com/microsoft/Agents-for-python.git@main#subdirectory=dev/testing/microsoft-agents-testing",
    "testing-common",
]

[tool.uv.sources]
testing-common = { path = "testing-common", editable = true }

[tool.pytest.ini_options]
# Root-level config — covers _tests/ (shared tooling unit tests).
# Environment-specific settings live in environments/<env>/pytest.ini.
testpaths = ["_tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
addopts = "--strict-markers --tb=short"
minversion = "6.0"
