[project]
name = "agents-local-tests"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pytest",
    "pytest-asyncio",
    "microsoft-agents-testing @ git+https://github.com/microsoft/Agents-for-python.git@users/robrandao/testing-host#subdirectory=dev/testing/microsoft-agents-testing",
]